<?xml version="1.0"?>
<package>
  <name>dji_gazebo</name>
  <version>0.0.1</version>
  <description>The dji_gazebo package</description>

  <maintainer email="tareqaziz2010@gmail.com">Tareq ALQutami</maintainer>

  <license>BSD</license>
  <author email="tareqaziz2010@gmail.com">Tareq ALQutami</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dji_sdk</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dji_sdk</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
